[package]
name = "versatiles_core"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
brotli.workspace = true
byteorder = { workspace = true, features = [] }
clap = { workspace = true, optional = true, features = ["derive"] }
colored = { workspace = true, optional = true }
enumset.workspace = true
flate2.workspace = true
zstd.workspace = true
futures.workspace = true
itertools.workspace = true
log.workspace = true
lru = "0.16"
num-traits = "0.2.19"
num_cpus.workspace = true
regex.workspace = true
reqwest.workspace = true
tokio.workspace = true

versatiles_derive.workspace = true

[dev-dependencies]
assert_fs.workspace = true
criterion.workspace = true
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }
wildmatch.workspace = true

# Multithreading benchmark dependencies
dashmap.workspace = true
arc-swap.workspace = true
parking_lot.workspace = true
moka.workspace = true

# Features:
# - cli: Enable CLI-specific dependencies (colored output, clap)
# - test: Disable terminal output for testing
# - no-terminal: Disable terminal progress output (for Node.js bindings, WASM, etc.)
[features]
default = []
cli = ["dep:colored", "dep:clap"]
test = []

[[bench]]
name = "byte_iterator"
harness = false

[[bench]]
name = "multithreading_optimizations"
harness = false

[[bench]]
name = "cache_performance"
harness = false
