[package]
name = "versatiles_core"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
brotli = { version = "8.0.2", default-features = false, features = ["std"] }
byteorder = { workspace = true, features = [] }
clap = { workspace = true, optional = true, features = ["derive"] }
colored = { version = "3.1.1", default-features = false, optional = true }
enumset.workspace = true
flate2 = { version = "1.1.9", default-features = false, features = ["default"] }
futures.workspace = true
itertools.workspace = true
log.workspace = true
lru = "0.18"
num-traits = "0.2.19"
num_cpus.workspace = true
percent-encoding = "2"
regex.workspace = true
reqwest.workspace = true
ssh2 = { version = "0.9", optional = true }
ssh2-config = { version = "0.7", default-features = false, optional = true }
tokio.workspace = true
zstd = { version = "0.13.3", default-features = false }

versatiles_derive.workspace = true

[dev-dependencies]
approx.workspace = true
assert_fs.workspace = true
criterion = "0.8.2"
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }
wildmatch.workspace = true

# In-process SFTP test server — only needed on unix (russh depends on aws-lc-rs
# which requires NASM/cmake on Windows and is not needed for the Windows build).
[target.'cfg(unix)'.dev-dependencies]
russh = "0.60"
russh-sftp = "2.1"

# Multithreading benchmark dependencies
dashmap.workspace = true
arc-swap.workspace = true
parking_lot.workspace = true
moka.workspace = true

# Features:
# - cli: Enable CLI-specific dependencies (colored output, clap)
# - test: Disable terminal output for testing
# - no-terminal: Disable terminal progress output (for Node.js bindings, WASM, etc.)
[features]
default = []
cli = ["dep:colored", "dep:clap"]
ssh2 = ["dep:ssh2", "dep:ssh2-config"]
test = []

[[bench]]
name = "byte_iterator"
harness = false

[[bench]]
name = "multithreading_optimizations"
harness = false

[[bench]]
name = "cache_performance"
harness = false
