[package]
name = "versatiles_derive"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.97", features = ["proc-macro"] }
quote = { version = "1.0.40", features = ["proc-macro"] }
syn = { version = "2.0.104", features = ["full", "extra-traits"] }

[dev-dependencies]
prettyplease = "0.2.36"
pretty_assertions.workspace = true
