[package]
name = "versatiles_derive"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.105", features = ["proc-macro"] }
quote = { version = "1.0.43", features = ["proc-macro"] }
syn = { version = "2.0.114", features = ["full", "extra-traits"] }

[dev-dependencies]
anyhow.workspace = true
prettyplease = "0.2.37"
pretty_assertions.workspace = true
