[package]
name = "versatiles_geometry"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
futures.workspace = true
geo = { version = "0.31.0" }
lazy_static.workspace = true
log.workspace = true
num_cpus.workspace = true
regex.workspace = true
tokio.workspace = true

versatiles_core.workspace = true
versatiles_derive.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["macros"] }
versatiles_core = { workspace = true, features = ["test"] }

[features]
test = []
