[package]
name = "versatiles_image"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
fast_image_resize = { version = "5.5.0", default-features = false, features = [
"image"] }
image.workspace = true
imageproc.workspace = true
webp.workspace = true

versatiles_core.workspace = true
versatiles_derive.workspace = true

[dev-dependencies]
rstest.workspace = true

[features]
default = []
test = []
