[package]
name = "versatiles_image"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
fast_image_resize = { version = "6.0.0", default-features = false, features = [
	"image",
] }
image = { version = "0.25.9", default-features = false, features = [
	"avif",
	"jpeg",
	"png",
] }
imageproc.workspace = true
libwebp-sys = "0.14.2"

versatiles_core.workspace = true
versatiles_derive.workspace = true

[dev-dependencies]
rstest.workspace = true

[features]
default = []
test = []
