[package]
name = "versatiles_node"
authors.workspace = true
description = "Node.js bindings for VersaTiles"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
lazy_static.workspace = true
napi = { version = "3.7.1", features = ["async"] }
napi-derive = "3.4.1"
tokio.workspace = true
versatiles = { workspace = true, default-features = false, features = [
	"server",
] }
versatiles_container.workspace = true
versatiles_core = { workspace = true, default-features = false }

[dev-dependencies]
rstest.workspace = true

[build-dependencies]
napi-build = "2"
