[package]
name = "versatiles_node"
authors.workspace = true
description = "Node.js bindings for VersaTiles"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
ctor = "0.6.3"
env_logger.workspace = true
log.workspace = true
napi = { version = "3.8.1", features = ["async"] }
napi-derive = "3.5.0"
tokio.workspace = true
versatiles = { workspace = true, default-features = false, features = [
	"server",
] }
versatiles_container.workspace = true
versatiles_core = { workspace = true, default-features = false }

[dev-dependencies]
rstest.workspace = true
pretty_assertions.workspace = true

[build-dependencies]
napi-build = "2"
