[package]
name = "versatiles_node"
authors.workspace = true
description = "Node.js bindings for VersaTiles"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
ctor = "0.12.0"
env_logger.workspace = true
log.workspace = true
napi = { version = "3.8.6", features = ["async"] }
napi-derive = "3.5.5"
tokio.workspace = true
versatiles = { workspace = true, default-features = false, features = [
	"codegen",
	"server",
] }
versatiles_container.workspace = true
versatiles_core = { workspace = true, default-features = false }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
approx.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true

[build-dependencies]
napi-build = "2"
