[package]
name = "versatiles_pipeline"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ab_glyph = { version = "0.2.32", default-features = false }
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
gdal = { version = "0.18.0", optional = true }
gdal-sys = { version = "0.11.0", optional = true }
imageproc = { version = "0.25.0", default-features = false }
itertools = { workspace = true, features = ["use_alloc"] }
lazy_static.workspace = true
log.workspace = true
nom = { version = "8.0.0" }
nom-language = { version = "0.1.0" }
regex.workspace = true
tokio.workspace = true

versatiles_container.workspace = true
versatiles_core.workspace = true
versatiles_derive.workspace = true
versatiles_geometry.workspace = true
versatiles_image.workspace = true

[dev-dependencies]
assert_fs.workspace = true
lazy_static.workspace = true
pretty_assertions.workspace = true
regex.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["macros"] }

versatiles_container = { workspace = true, features = ["test"] }
versatiles_core = { workspace = true, features = ["test"] }
versatiles_geometry = { workspace = true, features = ["test"] }
versatiles_image = { workspace = true, features = ["test"] }

[features]
default = []
gdal = ["dep:gdal", "dep:gdal-sys"]
bindgen = ["gdal/bindgen"]
