[package]
name = "versatiles_pipeline"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
ab_glyph = { version = "0.2.32", default-features = false, features = ["std"] }
anyhow.workspace = true
async-trait.workspace = true
cel-interpreter = { version = "0.10.0", default-features = false, features = ["regex"] }
deadpool = { workspace = true, optional = true }
futures.workspace = true
geo.workspace = true
geo-types.workspace = true
gdal = { version = "0.19.0", optional = true }
gdal-sys = { version = "0.12.0", optional = true, features = ["bindgen"] }
imageproc = { workspace = true, features = ["text"] }
itertools = { workspace = true, features = ["use_alloc"] }
dashmap.workspace = true
log.workspace = true
moka.workspace = true
nom = { version = "8.0.0" }
nom-language = { version = "0.1.0" }
regex.workspace = true
rstar.workspace = true
reqwest.workspace = true
tokio.workspace = true

versatiles_container.workspace = true
versatiles_core.workspace = true
versatiles_derive.workspace = true
versatiles_geometry.workspace = true
versatiles_image.workspace = true

[dev-dependencies]
approx.workspace = true
assert_fs.workspace = true
axum = { workspace = true, features = ["http1", "tokio"] }
pretty_assertions.workspace = true
regex.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["macros", "net"] }

versatiles_container = { workspace = true, features = ["test"] }
versatiles_core = { workspace = true, features = ["test"] }
versatiles_geometry = { workspace = true, features = ["test"] }
versatiles_image = { workspace = true, features = ["test"] }

[features]
default = []
codegen = []
gdal = ["dep:gdal", "dep:gdal-sys", "dep:deadpool"]
bindgen = ["gdal/bindgen"]
