[package]
name = "versatiles_container"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
versatiles_shared = { path = "../versatiles_shared" }
async-trait = "0.1.67"
# axum = { version = "0.6.11", default-features = false, features = ["tokio"] }
# brotli = { version = "3.3.4", default-features = false, features = ["std"] }
byteorder = { version = "1.4.3", default-features = false }
# bytes = { version = "1.4.0", default-features = false }
# clap = { version = "4.1.10", default-features = true }
# clap-verbosity-flag = { version = "2.0.0", default-features = true }
# enumset = { version = "1.0.12", default-features = false }
# env_logger = { version = "0.10.0", default-features = false, features = ["regex"] }
# flate2 = { version = "1.0.25", default-features = false }
# futures = { version = "0.3.27", default-features = false }
# http = { version = "0.2.9", default-features = false }
# image = { version = "0.24.5", default-features = false, features = ["jpeg", "png"] }
itertools = { version = "0.10.5", default-features = false, features = ["use_alloc"] }
log = { version = "0.4.17", default-features = false }
# mime_guess = { version = "2.0.4", default-features = false }
# object_store = { version = "0.5.5", default-features = false, features = ["gcp"] }
r2d2 = { version = "0.8.10", default-features = false }
r2d2_sqlite = { version = "0.21.0", default-features = false }
# rand = { version = "0.8.5", default-features = false }
rayon = { version = "1.7.0", default-features = false }
# regex = { version = "1.7.1", default-features = false }
reqwest = { version = "0.11.14", default-features = false, features=["blocking"] }
rusqlite = { version = "0.28.0", default-features = false }
# sysinfo = { version = "0.28.3", default-features = false }
tar = { version = "0.4.38", default-features = false }
# term_size = { version = "0.3.2", default-features = false }
tokio = { version = "1.26.0", default-features = false }
# urlencoding = { version = "2.1.2", default-features = false }
# webp = { version = "0.2.2", default-features = false, features = ["img"] }
