[package]
name = "versatiles_shared"
version = "0.1.0"
edition = "2021"
workspace = "../.."

[dependencies]
brotli = { version = "3.3.4", default-features = false, features = ["std"] }
bytes = { version = "1.4.0", default-features = false }
clap = { version = "4.1.11", default-features = true, features = ["derive"] }
enumset = { version = "1.0.12", default-features = false }
flate2 = { version = "1.0.25", default-features = false }
http = { version = "0.2.9", default-features = false }
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png"] }
itertools = { version = "0.10.5", default-features = false }
log = { version = "0.4.17", default-features = false }
reqwest = { version = "0.11.15", default-features = false, features=["blocking"] }
term_size = { version = "0.3.2", default-features = false }
webp = { version = "0.2.2", default-features = false, features = ["img"] }
