[package]
name = "versatiles_server"
version = "0.1.0"
edition = "2021"
workspace = "../../.."

[dependencies]
versatiles_container = { path = "../versatiles_container" }
versatiles_shared = { path = "../versatiles_shared" }
async-trait = "0.1.67"
axum = { version = "0.6.11", default-features = false, features = ["tokio"] }
enumset = { version = "1.0.12", default-features = false }
log = { version = "0.4.17", default-features = false }
mime_guess = { version = "2.0.4", default-features = false }
tar = { version = "0.4.38", default-features = false }
