[package]
name = "versatiles_server"
version = "0.1.0"
edition = "2021"
workspace = "../../.."

[dependencies]
versatiles_container = { path = "../versatiles_container" }
versatiles_shared = { path = "../versatiles_shared" }
async-trait = { version = "0.1.68", default-features = false }
axum = { version = "0.6.11", default-features = false, features = ["tokio"] }
enumset = { version = "1.0.12", default-features = false }
hyper = { version = "0.14.25", default-features = false }
log = { version = "0.4.17", default-features = false }
mime_guess = { version = "2.0.4", default-features = false }
tar = { version = "0.4.38", default-features = false }
tokio = { version = "1.27.0", default-features = false }

[dev-dependencies]
assert_fs = { version = "1.0.12" }
futures = { version = "0.3.27", default-features = false, features = ["executor"] }
reqwest = { version = "0.11.16", default-features = false }
